# twcal

./: .flake8  LICENSE  Makefile  README.md  README_zh-TW.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/twcal/: __init__.py  cli.py  constants.py  convert.py  twdate.py  utils.py
tests/: test_cli.py  test_convert.py  test_twdate.py
